Added fixed mortgage calculator

--- a/js/unit/SpecRunner.html
+++ b/js/unit/SpecRunner.html
@@ -13,9 +13,11 @@
 
   <!-- include source files here... -->
   <script src="../src/InterestCalculator.js"></script>
+  <script src="../src/FixedMortgageCalculator.js"></script>
 
   <!-- include spec files here... -->
   <script src="spec/InterestCalculatorSpec.js"></script>
+  <script src="spec/FixedMortgageCalculatorSpec.js"></script>
 
 </head>
 
