First cut at rent or buy calculator

--- a/js/unit/SpecRunner.html
+++ b/js/unit/SpecRunner.html
@@ -14,10 +14,12 @@
   <!-- include source files here... -->
   <script src="../src/InterestCalculator.js"></script>
   <script src="../src/FixedMortgageCalculator.js"></script>
+  <script src="../src/RentOrBuyCalculator.js"></script>
 
   <!-- include spec files here... -->
   <script src="spec/InterestCalculatorSpec.js"></script>
   <script src="spec/FixedMortgageCalculatorSpec.js"></script>
+  <script src="spec/RentOrBuyCalculatorSpec.js"></script>
 
 </head>
 
