--- a/rentorbuy.html
+++ b/rentorbuy.html
@@ -18,8 +18,6 @@
 						<input type="number" class="form-control" id="purchase-price">
 					</div>
 				</div>
-			</div>
-			<div class="row">
 				<div class="col-xs-12 col-sm-6">
 					<label for="down-payment">Down Payment: </label>
 					<div class="input-group">
@@ -27,8 +25,6 @@
 						<input type="number" class="form-control" id="down-payment">
 					</div>
 				</div>
-			</div>
-			<div class="row">
 				<div class="col-xs-12 col-sm-6">
 					<label for="mortgage-rate">Mortgage Interest Rate: </label>
 					<div class="input-group">
@@ -36,8 +32,6 @@
 						<span class="input-group-addon">%</span>
 					</div>
 				</div>
-			</div>
-			<div class="row">
 				<div class="col-xs-12 col-sm-6">
 					<label for="mortgage-term">Mortgage Term (years): </label>
 					<select class="form-control" id="mortgage-term">
@@ -46,8 +40,6 @@
     					<option value="30" selected="selected">30</option>
 					</select>
 				</div>
-			</div>
-			<div class="row">
 				<div class="col-xs-12 col-sm-6">
 					<label for="property-tax-rate">Property Tax Rate: </label>
 					<div class="input-group">
@@ -55,8 +47,6 @@
 						<span class="input-group-addon">%</span>
 					</div>
 				</div>
-			</div>
-			<div class="row">
 				<div class="col-xs-12 col-sm-6">
 					<label for="monthly-hoa">Monthly HOA fees: </label>
 					<div class="input-group">
@@ -64,8 +54,6 @@
 						<input type="number" class="form-control" id="monthly-hoa">
 					</div>
 				</div>
-			</div>
-			<div class="row">
 				<div class="col-xs-12 col-sm-6">
 					<label for="annual-insurance">Annual Insurance: </label>
 					<div class="input-group">
@@ -73,8 +61,6 @@
 						<input type="number" class="form-control" id="annual-insurance">
 					</div>
 				</div>
-			</div>
-			<div class="row">
 				<div class="col-xs-12 col-sm-6">
 					<label for="appreciation-rate">Estimated Annual Appreciation Rate: </label>
 					<div class="input-group">
@@ -82,8 +68,6 @@
 						<span class="input-group-addon">%</span>
 					</div>
 				</div>
-			</div>
-			<div class="row">
 				<div class="col-xs-12 col-sm-6">
 					<label for="annual-maintenance">Annual maintenance: </label>
 					<div class="input-group">
@@ -91,8 +75,46 @@
 						<input type="number" class="form-control" id="annual-maintenance">
 					</div>
 				</div>
+				<div class="col-xs-12 col-sm-6">
+					<label for="inflation-rate">Annual Inflation Rate: </label>
+					<div class="input-group">
+						<input type="number" class="form-control" id="inlfation-rate" value="2">
+						<span class="input-group-addon">%</span>
+					</div>
+				</div>
+				<div class="col-xs-12 col-sm-6">
+					<label for="tax-rate">Marginal Tax Rate: </label>
+					<div class="input-group">
+						<input type="number" class="form-control" id="tax" value="28">
+						<span class="input-group-addon">%</span>
+					</div>
+				</div>
+				<div class="col-xs-12 col-sm-6">
+					<label for="rent">Monthly Rent: </label>
+					<div class="input-group">
+						<span class="input-group-addon">$</span>
+						<input type="number" class="form-control" id="rent">
+					</div>
+				</div>
+				<div class="col-xs-12 col-sm-6">
+					<label for="rent-inflation">Annual Rent Inflation: </label>
+					<div class="input-group">
+						<input type="number" class="form-control" id="rent-inflation" value="3">
+						<span class="input-group-addon">%</span>
+					</div>
+				</div>
+				<div class="col-xs-12 col-sm-6">
+					<label for="investment-rate">Investment Return Rate (after taxes): </label>
+					<div class="input-group">
+						<input type="number" class="form-control" id="investment-rate" value="5">
+						<span class="input-group-addon">%</span>
+					</div>
+				</div>
+
+
+
 			</div>
-			
+
 
 
 
