Added submit button

--- a/rentorbuy.html
+++ b/rentorbuy.html
@@ -11,28 +11,29 @@
 	<body>
 		<div class="container-fluid">
 			<div class="row">
-				<div class="col-xs-12 col-sm-6">
+				<form role="form">
+				<div class="form-group col-xs-12 col-sm-6">
 					<label for="purchase-price">Purchase price: </label>
 					<div class="input-group">
 						<span class="input-group-addon">$</span>
 						<input type="number" class="form-control" id="purchase-price">
 					</div>
 				</div>
-				<div class="col-xs-12 col-sm-6">
+				<div class="form-group col-xs-12 col-sm-6">
 					<label for="down-payment">Down Payment: </label>
 					<div class="input-group">
 						<span class="input-group-addon">$</span>
 						<input type="number" class="form-control" id="down-payment">
 					</div>
 				</div>
-				<div class="col-xs-12 col-sm-6">
+				<div class="form-group col-xs-12 col-sm-6">
 					<label for="mortgage-rate">Mortgage Interest Rate: </label>
 					<div class="input-group">
 						<input type="number" class="form-control" id="mortgage-rate" value="4.5">
 						<span class="input-group-addon">%</span>
 					</div>
 				</div>
-				<div class="col-xs-12 col-sm-6">
+				<div class="form-group col-xs-12 col-sm-6">
 					<label for="mortgage-term">Mortgage Term (years): </label>
 					<select class="form-control" id="mortgage-term">
     					<option value="15">15</option>
@@ -40,83 +41,81 @@
     					<option value="30" selected="selected">30</option>
 					</select>
 				</div>
-				<div class="col-xs-12 col-sm-6">
+				<div class="form-group col-xs-12 col-sm-6">
 					<label for="property-tax-rate">Property Tax Rate: </label>
 					<div class="input-group">
 						<input type="number" class="form-control" id="property-tax-rate" value="1.25">
 						<span class="input-group-addon">%</span>
 					</div>
 				</div>
-				<div class="col-xs-12 col-sm-6">
+				<div class="form-group col-xs-12 col-sm-6">
 					<label for="monthly-hoa">Monthly HOA fees: </label>
 					<div class="input-group">
 						<span class="input-group-addon">$</span>
 						<input type="number" class="form-control" id="monthly-hoa">
 					</div>
 				</div>
-				<div class="col-xs-12 col-sm-6">
+				<div class="form-group col-xs-12 col-sm-6">
 					<label for="annual-insurance">Annual Insurance: </label>
 					<div class="input-group">
 						<span class="input-group-addon">$</span>
 						<input type="number" class="form-control" id="annual-insurance">
 					</div>
 				</div>
-				<div class="col-xs-12 col-sm-6">
+				<div class="form-group col-xs-12 col-sm-6">
 					<label for="appreciation-rate">Estimated Annual Appreciation Rate: </label>
 					<div class="input-group">
 						<input type="number" class="form-control" id="appreciation-rate" value="2">
 						<span class="input-group-addon">%</span>
 					</div>
 				</div>
-				<div class="col-xs-12 col-sm-6">
+				<div class="form-group col-xs-12 col-sm-6">
 					<label for="annual-maintenance">Annual maintenance: </label>
 					<div class="input-group">
 						<span class="input-group-addon">$</span>
 						<input type="number" class="form-control" id="annual-maintenance">
 					</div>
 				</div>
-				<div class="col-xs-12 col-sm-6">
+				<div class="form-group col-xs-12 col-sm-6">
 					<label for="inflation-rate">Annual Inflation Rate: </label>
 					<div class="input-group">
 						<input type="number" class="form-control" id="inlfation-rate" value="2">
 						<span class="input-group-addon">%</span>
 					</div>
 				</div>
-				<div class="col-xs-12 col-sm-6">
+				<div class="form-group col-xs-12 col-sm-6">
 					<label for="tax-rate">Marginal Tax Rate: </label>
 					<div class="input-group">
 						<input type="number" class="form-control" id="tax" value="28">
 						<span class="input-group-addon">%</span>
 					</div>
 				</div>
-				<div class="col-xs-12 col-sm-6">
+				<div class="form-group col-xs-12 col-sm-6">
 					<label for="rent">Monthly Rent: </label>
 					<div class="input-group">
 						<span class="input-group-addon">$</span>
 						<input type="number" class="form-control" id="rent">
 					</div>
 				</div>
-				<div class="col-xs-12 col-sm-6">
+				<div class="form-group col-xs-12 col-sm-6">
 					<label for="rent-inflation">Annual Rent Inflation: </label>
 					<div class="input-group">
 						<input type="number" class="form-control" id="rent-inflation" value="3">
 						<span class="input-group-addon">%</span>
 					</div>
 				</div>
-				<div class="col-xs-12 col-sm-6">
+				<div class="form-group col-xs-12 col-sm-6">
 					<label for="investment-rate">Investment Return Rate (after taxes): </label>
 					<div class="input-group">
 						<input type="number" class="form-control" id="investment-rate" value="5">
 						<span class="input-group-addon">%</span>
 					</div>
 				</div>
-
-
-
+				<div class="col-xs-1">
+					<input class="btn btn-default" type="submit" value="Calculate">
+				</div>
+			</form>
 			</div>
-
-
-
 
 		</div>
 
