Changed 'savings' to 'cash' to better disambiguate from renting scenario

--- a/rentorbuy.html
+++ b/rentorbuy.html
@@ -137,7 +137,7 @@
 								<th>Month</th>
 								<th>Savings when renting</th>
 								<th>Equity in home</th>
-								<th>Savings after selling home</th>
+								<th>Cash after selling home</th>
 							</tr>
 						</thead>
 						<tbody id="results-table-body">
@@ -249,7 +249,7 @@
 							data: cashWhenRenting
 						},
 						{
-							label: "Savings after selling home",
+							label: "Cash after selling home",
 							fill: true,
 							borderColor: "rgba(255,205,86,1)",
 							backgroundColor: "rgba(255,205,86,0.4)",
