Page header formatting

--- a/rentorbuy.html
+++ b/rentorbuy.html
@@ -10,11 +10,8 @@
 
 	<body>
 		<div class="container-fluid">
-			<div class="row">
-				<div class="col-xs-12">
-					<h1 class="text-center">Should I rent or buy my home?</h1>
-					<br />
-				</div>
+			<div class="page-header">
+				<h1 class="text-center">Should I rent or buy my home?</h1>
 			</div>
 
 			<!-- Show results of analysis -->
