Added tooltip to explain cash after selling

--- a/rentorbuy.html
+++ b/rentorbuy.html
@@ -29,7 +29,9 @@
 								<th>Month</th>
 								<th>Savings when renting</th>
 								<th>Equity in home</th>
-								<th>Cash after selling home</th>
+								<th>Cash after selling home
+									<a href="#" class="tooltip-large" data-toggle="tooltip" title="Assuming a rate of 6% to cover realtor fees and closing costs, this is the cash you would receive after selling your home.">(?)</a>
+								</th>
 							</tr>
 						</thead>
 						<tbody id="results-table-body">
